@@ -35,9 +35,10 @@ class Preferences : public QDialog
 
 public:
     Preferences(QWidget *parent = 0);
-    int getNumOctaves() const { return m_numOctaves; }
+    int getNumKeys() const { return m_numKeys; }
     int getDrumsChannel() const { return m_drumsChannel; }
     int getNetworkPort() const { return m_networkPort; }
+    int getStartingKey() const { return m_startingKey; }
     bool getGrabKeyboard() const { return m_grabKb; }
     bool getStyledWidgets() const { return m_styledKnobs; }
     bool getAlwaysOnTop() const { return m_alwaysOnTop; }
@@ -67,11 +68,13 @@ public:
     KeyboardMap* getRawKeyboardMap() { return &m_rawmap; }
     void retranslateUi();
     void setColorPolicyDialog(ColorDialog *value);
+    void setNoteNames(const QStringList& noteNames);
 
 public slots:
-    void setNumOctaves(int value) { m_numOctaves = value; }
+    void setNumKeys(int value) { m_numKeys = value; }
     void setDrumsChannel(int value) { m_drumsChannel = value; }
     void setNetworkPort(int value) { m_networkPort = value; }
+    void setStartingKey(int value) { m_startingKey = value; }
     void setGrabKeyboard(bool value) { m_grabKb = value; }
     void setStyledWidgets(bool value) { m_styledKnobs = value; }
     void setAlwaysOnTop(bool value) { m_alwaysOnTop = value; }
@@ -97,9 +100,10 @@ private:
     Ui::PreferencesClass ui;
     QString m_insFileName;
     InstrumentList m_ins;
-    int m_numOctaves;
+    int m_numKeys;
     int m_drumsChannel;
     int m_networkPort;
+    int m_startingKey;
     bool m_grabKb;
     bool m_styledKnobs;
     bool m_alwaysOnTop;
